# DYEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
DYEditor/: CMakeLists.txt
DYEditor/DYEditorCodeGenerator/: CMakeLists.txt
DYEditor/DYEditorCodeGenerator/include/: ComponentCodeGeneration.h  PropertyCodeGeneration.h  PropertyDescriptor.h  SystemCodeGeneration.h
DYEditor/DYEditorCodeGenerator/src/: main.cpp
DYEditor/assets/default/: EntityIDShader.shader
DYEditor/cmake/Modules/: CodeGenerationCommand.cmake  DYEditorProject.cmake
DYEditor/include/: BuiltInTypeRegister.h  Components.h  DYEditorApplication.h  DefaultComponentFunctions.h  EditorComponent.h  EditorConfig.h  EditorCore.h  EditorLayer.h  EditorProperty.h  EditorSystem.h  EntityLevelEditorLayer.h  EntityLevelFile.h  EntityLevelRuntimeLayer.h  EntitySceneEditorLayer.h  EntitySceneRuntimeLayer.h  ProjectConfig.h  Scene.h  SceneEditorLayer.h  SceneRuntimeLayer.h  SceneViewEntitySelection.h  SerializableType.h  SerializedObject.h  Systems.h  TypeRegistry.h
DYEditor/include/Components/: AudioSource2DComponent.h  CameraComponent.h  HierarchyComponents.h  IDComponent.h  LocalTransformComponent.h  NameComponent.h  PlayAudioSourceOnInitializeComponent.h  SpriteRendererComponent.h  TransformComponent.h  TransformComponents.h  WindowComponents.h
DYEditor/include/Configuration/: ProjectConfig.h  SubWindowConfiguration.h
DYEditor/include/Core/: ApplicationState.h  Components.h  EditorComponent.h  EditorCore.h  EditorProperty.h  EditorSystem.h  Entity.h  EntityTypes.h  RuntimeSceneManagement.h  RuntimeState.h  Scene.h  Systems.h  World.h  WorldView.h
DYEditor/include/FileSystem/: FileSystem.h
DYEditor/include/ImGui/: EditorImGuiUtil.h  EditorWindowManager.h
DYEditor/include/Internal/: TypeRegistry.h
DYEditor/include/Serialization/: SerializedArray.h  SerializedComponent.h  SerializedComponentHandle.h  SerializedEntity.h  SerializedObject.h  SerializedObjectFactory.h  SerializedScene.h  SerializedSystemHandle.h
DYEditor/include/Systems/: AudioSystem.h  AudioSystems.h  ExecuteLoadSceneCommandSystem.h  RegisterCameraSystem.h  (+3 more)
DYEditor/src/: ApplicationState.cpp  AudioSystem.cpp  AudioSystems.cpp  BuiltInTypeRegister.cpp  DYEditorApplication.cpp  EditorConfig.cpp  EditorImGuiUtil.cpp  EditorLayer.cpp  EditorSystem.cpp  EditorWindowManager.cpp  Entity.cpp  EntityLevelEditorLayer.cpp  EntityLevelFile.cpp  EntityLevelRuntimeLayer.cpp  EntityOperations.cpp  EntitySceneEditorLayer.cpp  EntitySceneRuntimeLayer.cpp  EntityUtil.cpp  ExecuteLoadSceneCommandSystem.cpp  FileSystem.cpp  HierarchyComponents.cpp  ProjectConfig.cpp  RegisterCameraSystem.cpp  Render2DSpriteSystem.cpp  RuntimeSceneManagement.cpp  RuntimeState.cpp  Scene.cpp  SceneEditorLayer.cpp  SceneRuntimeLayer.cpp  SceneViewEntitySelection.cpp  SerializedArray.cpp  SerializedComponent.cpp  SerializedComponentHandle.cpp  SerializedEntity.cpp  SerializedObject.cpp  SerializedObjectFactory.cpp  SerializedScene.cpp  SerializedSystemHandle.cpp  StringUtil.cpp  SubWindowConfiguration.cpp  (+8 more)
DYEngine/: CMakeLists.txt  Precompiled.h
DYEngine/assets/: DebugGizmo.shader  DebugLineGizmo.shader  Image.shader  SpriteDefault.shader  SpriteUnlit.shader  SpritesDefault.shader  Unlit.shader
DYEngine/include/: AppEntryPoint.h  Application.h  ApplicationEvent.h  Base.h  ContextBase.h  Event.h  ImGuiLayer.h  KeyCode.h  KeyEvent.h  LayerBase.h  LayerStack.h  Logger.h  SDLContext.h  SDLWindow.h  Screen.h  Time.h  WindowBase.h  WindowManager.h
DYEngine/src/: AABB.cpp  Application.cpp  AudioClip.cpp  AudioManager.cpp  AudioSource.cpp  AudioSystem.cpp  BlendStateCommandProcessor.cpp  Buffer.cpp  Camera.cpp  CameraProperties.cpp  Color.cpp  ComponentBase.cpp  ContextBase.cpp  ControllerEvent.cpp  DebugDraw.cpp  DepthStateCommandProcessor.cpp  EasingFunctions.cpp  Entity.cpp  EventSystemBase.cpp  FPSCounter.cpp  FileSystem.cpp  Framebuffer.cpp  GUID.cpp  GameObject.cpp  Gamepad.cpp  GamepadEvent.cpp  ImGuiLayer.cpp  ImGuiUtil.cpp  ImagePointerEventHandler.cpp  ImageRenderer.cpp  InputManager.cpp  KeyCode.cpp  LayerBase.cpp  LayerStack.cpp  Loger.cpp  Logger.cpp  Material.cpp  MaterialPropertyBlock.cpp  Math.cpp  OpenGL.cpp  (+25 more)
DYEntity/: CMakeLists.txt
DYEntity/include/: Components.h  Entity.h  NameComponent.h  TransformComponent.h  TypeRegistry.h  World.h  WorldView.h
DYEntity/src/: Components.cpp  Entity.cpp  TypeRegistry.cpp  World.cpp
MiniGamesDemo/: CMakeLists.txt  CollisionTestLayer.cpp  CollisionTestLayer.h  GizmosRippleEffectManager.h  MiniGamesApp.cpp  MiniGamesApp.h  PongLayer.cpp  PongLayer.h  WindowParticlesManager.cpp  WindowParticlesManager.h
MiniGamesDemo/Components/: AttachableToPaddle.cpp  AttachableToPaddle.h  Collider.cpp  Collider.h  Hittable.cpp  Hittable.h  Sprite.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h
MiniGamesDemo/Layers/: CollisionTestLayer.cpp  CollisionTestLayer.h  LandTheBallLayer.cpp  LandTheBallLayer.h  MainMenuLayer.cpp  MainMenuLayer.h  PongLayer.cpp  PongLayer.h
MiniGamesDemo/Objects/: Ball.cpp  Ball.h  Camera.cpp  Camera.h  LandBall.cpp  LandBall.h  PlayerPaddle.cpp  PlayerPaddle.h  PongBall.cpp  PongBall.h  PongGoalArea.cpp  PongGoalArea.h  PongHomebase.h  PongPlayer.h  SpriteButton.h  SpriteUnsignedNumber.cpp  SpriteUnsignedNumber.h  Wall.cpp  Wall.h  WindowCamera.cpp  WindowCamera.h  WindowFrame.cpp  WindowFrame.h
Pong/: CMakeLists.txt  PongApp.cpp  PongLayer.cpp  PongLayer.h
Sandbox/: CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  FrameCounterComponent.cpp  FrameCounterComponent.h  ImagePointerEventHandler.cpp  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  SandboxMessage.cpp  SandboxMessage.h  StaticAABBColliderManager.cpp  SubtitleUpdater.h
Sandbox/example/: UserTypeRegister.template.cpp
Sandbox/include/: AnotherTestComponents.h  SandboxLayer.h  StaticAABBColliderManager.h  SystemExample.h  SystemFunctionExample.h  TestComponentA.h  TestComponents.h
Sandbox/src/: SandboxApp.cpp  SandboxLayer.cpp  StaticAABBColliderManager.cpp  SystemExample.cpp  SystemFunctionExample.cpp
(+158 files in other folders)
